# nfinder

./: .gitignore  AUTHORS  AUTHORS.md  LICENSE  MANIFEST.in  README.md  README.rst  examples.ipynb  pyproject.toml  setup.cfg
.ipynb_checkpoints/: examples-checkpoint.ipynb
nfinder/: __init__.py  example.ipynb  nfinder.py  plotting.py  util.py
nfinder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
nfinder/.ipynb_checkpoints/: nfinder-checkpoint.py  plotting-checkpoint.py  util-checkpoint.py
nfinder/plugins/: find.py  napari.py
tests/images/: merge_drosophila.tif  segmentation_drosophila.tif
