[metadata]
name = nfinder
version = 0.0.2
author = Santiago N. Rodriguez Alvarez
author_email = rodriguezsantiago96@gmail.com
description = Automatic inference of neighboring cells based on their Delaunay triangulation.
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/santi-rodriguez/nfinder
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
