[metadata]
name = nfinder
version = 0.3.dev0
author = Santiago N. Rodriguez Alvarez
author_email = rodriguezsantiago96@gmail.com
description = Automatic inference of neighboring cells based on their Delaunay triangulation.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = science, microscopy, image processing, cells neighbors
url = https://github.com/santi-rodriguez/nfinder
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: napari

[options]
packages = nfinder
python_requires = >=3.7
include_package_data = True

[options.entry_points]
napari.plugin =
    nfinder = nfinder.plugins.napari